--- a/index.html
+++ b/index.html
@@ -8,5 +8,53 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     </head>
 
-    <body></body>
+    <body>
+        <header>
+            <div class="container">
+                <nav>
+                    <h1>DESIGN AI</h1>
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+
+        <section id="home">
+            <div class="container">
+                <h1>Welcome to DESIGN AI</h1>
+                <p>Design AI is an AI organisation that provides AI services to businesses and individuals. It is also one AI experience area where users are enabled to use our explicit AI services</p>
+            </div>
+        </section>
+
+        <section id="about">
+            <div class="container">
+                <h1>About Us</h1>
+                <p>DESIGN AI is a non and for profit AI company that belives in open source AI and much, more. Founded be Agastya Naik in 2025, Design AI has continously been updating for all of mankind</p>
+            </div>
+        </section>
+
+        <section id="services">
+            <div class="container">
+                <h1>Our Services</h1>
+                <p>Design AI provides the following services:</p>
+                <ul>
+                    <li>AI Consulting</li>
+                    <li>AI Development</li>
+                    <li>AI services</li>
+                    <li>AI Experience</li>
+                    <li>and much, much more...with more of AI</li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="contact">
+            <div class="container">
+                <h1>Contact Us</h1>
+                <p>Email:
+                    <a href="mailto: "</a>
+    </body>
 </html>
