update-comments(html--nav-id)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <header>
             <div class="container">
                 <nav>
+                    <!--Nav-bar-->
+
                     <h1>DESIGN AI</h1>
                     <ul>
                         <li><a href="#home">Home</a></li>
@@ -23,6 +25,7 @@
             </div>
         </header>
 
+        <!--Id--pages-->
         <section id="home">
             <div class="container">
                 <h1>Welcome to DESIGN AI</h1>
