--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
             <div class="container">
                 <h1>Contact Us</h1>
                 <p>Email:
-                    <a href="mailto: "</a>
+                    <a href="mailto:"></a>
     </body>
 </html>
