--- a/index.html
+++ b/index.html
@@ -27,21 +27,25 @@
 
         <!--Id--pages-->
         <section id="home">
-            <div class="container">
+            <div class="containerA">
                 <h1>Welcome to DESIGN AI</h1>
                 <p>Design AI is an AI organisation that provides AI services to businesses and individuals. It is also one AI experience area where users are enabled to use our explicit AI services</p>
+                <img src="hello_pic.jpg" alt="Hello" width="500" height="500"/>
+                <p>Our mission is to provide AI services to all of mankind and to make AI accessible to everyone. We believe that AI is the future and that it can be used to solve many of the world's problems</p>
             </div>
         </section>
 
         <section id="about">
-            <div class="container">
+            <div class="containerB">
                 <h1>About Us</h1>
                 <p>DESIGN AI is a non and for profit AI company that belives in open source AI and much, more. Founded be Agastya Naik in 2025, Design AI has continously been updating for all of mankind</p>
+                <p>Our team of AI experts are dedicated to providing the best AI services to our clients. We have worked with many businesses and individuals to help them implement AI solutions that have helped them grow and succeed</p>
+                <p>Our goal is to make AI accessible to everyone and to help businesses and individuals use AI to solve their problems. We believe that AI is the future and that it can be used to solve many of the world's problems</p>
             </div>
         </section>
 
         <section id="services">
-            <div class="container">
+            <div class="containerC">
                 <h1>Our Services</h1>
                 <p>Design AI provides the following services:</p>
                 <ul>
@@ -55,7 +59,7 @@
         </section>
 
         <section id="contact">
-            <div class="container">
+            <div class="containerD">
                 <h1>Contact Us</h1>
                 <p>Email:
                     <a href="mailto:"></a>
