--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
             <div class="containerD">
                 <h1>Contact Us</h1>
                 <p>Email:
-                    <a href="mailto:"></a>
+                    <a href="mailto: agastya.naik27@outlook.com">
+                    Click here to email us
+                    </a>
+                </p>
     </body>
 </html>
