commit_validation_html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>DESIGN AI | An AI organisation</title>
+        <title>DESIGN AI | An AI Organisation</title>
         <link rel="stylesheet" href="style.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
@@ -12,8 +12,7 @@
         <header>
             <div class="container">
                 <nav>
-                    <!--Nav-bar-->
-
+                    <!-- Nav-bar -->
                     <h1>DESIGN AI</h1>
                     <ul>
                         <li><a href="#home">Home</a></li>
@@ -25,22 +24,22 @@
             </div>
         </header>
 
-        <!--Id--pages-->
+        <!-- Id--pages -->
         <section id="home">
             <div class="containerA">
                 <h1>Welcome to DESIGN AI</h1>
-                <p>Design AI is an AI organisation that provides AI services to businesses and individuals. It is also one AI experience area where users are enabled to use our explicit AI services</p>
-                <img src="hello_pic.jpg" alt="Hello" width="500" height="500"/>
-                <p>Our mission is to provide AI services to all of mankind and to make AI accessible to everyone. We believe that AI is the future and that it can be used to solve many of the world's problems</p>
+                <p>Design AI is an AI organisation that provides AI services to businesses and individuals. It is also one AI experience area where users are enabled to use our explicit AI services.</p>
+                <img src="hello_pic.jpg" alt="A welcoming image for DESIGN AI" width="500" height="500"/>
+                <p>Our mission is to provide AI services to all of mankind and to make AI accessible to everyone. We believe that AI is the future and that it can be used to solve many of the world's problems.</p>
             </div>
         </section>
 
         <section id="about">
             <div class="containerB">
                 <h1>About Us</h1>
-                <p>DESIGN AI is a non and for profit AI company that belives in open source AI and much, more. Founded be Agastya Naik in 2025, Design AI has continously been updating for all of mankind</p>
-                <p>Our team of AI experts are dedicated to providing the best AI services to our clients. We have worked with many businesses and individuals to help them implement AI solutions that have helped them grow and succeed</p>
-                <p>Our goal is to make AI accessible to everyone and to help businesses and individuals use AI to solve their problems. We believe that AI is the future and that it can be used to solve many of the world's problems</p>
+                <p>DESIGN AI is a non-profit and for-profit AI company that believes in open-source AI and much more. Founded by Agastya Naik in 2025, Design AI has continuously been updating for all of mankind.</p>
+                <p>Our team of AI experts is dedicated to providing the best AI services to our clients. We have worked with many businesses and individuals to help them implement AI solutions that have helped them grow and succeed.</p>
+                <p>Our goal is to make AI accessible to everyone and to help businesses and individuals use AI to solve their problems. We believe that AI is the future and that it can be used to solve many of the world's problems.</p>
             </div>
         </section>
 
@@ -51,9 +50,9 @@
                 <ul>
                     <li>AI Consulting</li>
                     <li>AI Development</li>
-                    <li>AI services</li>
+                    <li>AI Services</li>
                     <li>AI Experience</li>
-                    <li>and much, much more...with more of AI</li>
+                    <li>And much more...</li>
                 </ul>
             </div>
         </section>
@@ -62,9 +61,15 @@
             <div class="containerD">
                 <h1>Contact Us</h1>
                 <p>Email:
-                    <a href="mailto: agastya.naik27@outlook.com">
-                    Click here to email us
-                    </a>
+                    <a href="mailto:agastya.naik27@outlook.com">Click here to email us</a>
                 </p>
+            </div>
+        </section>
+
+        <footer>
+            <div class="container">
+                <p>&copy; 2025 DESIGN AI. All rights reserved.</p>
+            </div>
+        </footer>
     </body>
 </html>
