commit_html_images

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <section id="about">
             <div class="containerB">
                 <h1>About Us</h1>
+                <img src="computer_code.jpg" alt="about_us" width="500" height="500"/>
                 <p>DESIGN AI is a non-profit and for-profit AI company that believes in open-source AI and much more. Founded by Agastya Naik in 2025, Design AI has continuously been updating for all of mankind.</p>
                 <p>Our team of AI experts is dedicated to providing the best AI services to our clients. We have worked with many businesses and individuals to help them implement AI solutions that have helped them grow and succeed.</p>
                 <p>Our goal is to make AI accessible to everyone and to help businesses and individuals use AI to solve their problems. We believe that AI is the future and that it can be used to solve many of the world's problems.</p>
@@ -60,6 +61,8 @@
         <section id="contact">
             <div class="containerD">
                 <h1>Contact Us</h1>
+                <img src="ai_bot.jpg" alt="contact_us" width="500" height="500"/>
+                <p>If you have any questions or would like to learn more about our services, please contact us:</p>
                 <p>Email:
                     <a href="mailto:agastya.naik27@outlook.com">Click here to email us</a>
                 </p>
