website_update_withJS

--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
         <link rel="stylesheet" href="style.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+        <meta name="description" content="Design AI is an AI organisation that provides AI services to businesses and individuals. It is also one AI experience area where users are enabled to use our explicit AI services."/>
+        <meta name="keywords" content="AI, Artificial Intelligence, AI Organisation, AI Services, AI Experience"/>
+        <meta name="author" content="Agastya Naik"/>
+        <meta name="robots" content="index, follow"/>
+        <script src="script.js"></script>
     </head>
 
     <body>
         <header>
             <div class="container">
                 <nav>
-                    <!-- Nav-bar -->
+                    <!-- Nav-bar -->    
                     <h1>DESIGN AI</h1>
                     <ul>
                         <li><a href="#home">Home</a></li>
