--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name="description" content="Design AI is an AI organisation that provides AI services to businesses and individuals.">
-        <meta name="keywords" content="AI, Artificial Intelligence, AI Organisation, AI Services, AI Experience">
+        <meta name="description" content="Design AI is a cutting-edge AI organization providing innovative solutions for businesses and individuals.">
+        <meta name="keywords" content="AI, Artificial Intelligence, AI Services, AI Consulting, AI Development">
         <meta name="author" content="Agastya Naik">
         <meta name="robots" content="index, follow">
-        <title>DESIGN AI | An AI Organisation</title>
+        <title>DESIGN AI | Empowering the Future</title>
         <link rel="stylesheet" href="style.css">
         <script defer src="script.js"></script>
     </head>
@@ -32,18 +32,16 @@
             <section id="home" class="hero">
                 <div class="container">
                     <h1>Welcome to DESIGN AI</h1>
-                    <p>Design AI provides AI services to businesses and individuals, making AI accessible to everyone.</p>
-                    <p>Learn more about us below...</p>
-                    <p>DESIGN AI is one AI organisation developed by my team and me to provide are users a better exeperience</p>
-                    <img src=".github/hello_pic.jpg" alt="A welcoming image for DESIGN AI" class="responsive-img">
+                    <p>Empowering businesses and individuals with cutting-edge AI solutions. Let's shape the future together.</p>
+                    <img src="images/hero_image.jpg" alt="Welcome to DESIGN AI" class="responsive-img">
                 </div>
             </section>
 
             <section id="about">
                 <div class="container">
                     <h1>About Us</h1>
-                    <img src=".github/computer_code.jpg" alt="About Us" class="responsive-img">
-                    <p>DESIGN AI is a non-profit and for-profit AI company founded by Agastya Naik in 2025. We believe in open-source AI and strive to make AI accessible to everyone.</p>
+                    <img src="images/about_us.jpg" alt="About Us" class="responsive-img">
+                    <p>At DESIGN AI, we are passionate about making AI accessible to everyone. Founded in 2025 by Agastya Naik, we are committed to open-source innovation and delivering impactful AI solutions.</p>
                 </div>
             </section>
 
@@ -52,9 +50,9 @@
                     <h1>Our Services</h1>
                     <ul>
                         <li>AI Consulting</li>
-                        <li>AI Development</li>
-                        <li>AI Services</li>
-                        <li>AI Experience</li>
+                        <li>Custom AI Development</li>
+                        <li>AI Integration Services</li>
+                        <li>AI Training and Workshops</li>
                         <li>And much more...</li>
                     </ul>
                 </div>
@@ -63,8 +61,8 @@
             <section id="contact">
                 <div class="container">
                     <h1>Contact Us</h1>
-                    <img src=".github/ai_bot.jpg" alt="Contact Us" class="responsive-img">
-                    <p>If you have any questions, feel free to reach out:</p>
+                    <img src="images/contact_us.jpg" alt="Contact Us" class="responsive-img">
+                    <p>Have questions or need assistance? Reach out to us anytime:</p>
                     <p>Email: <a href="mailto:agastya.naik27@outlook.com">agastya.naik27@outlook.com</a></p>
                 </div>
             </section>
