--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
             <section id="home" class="hero">
                 <div class="container">
                     <h1>Welcome to DESIGN AI</h1>
-                    <p>Empowering businesses and individuals with cutting-edge AI solutions. Let's shape the future together.</p>
-                    <img src="images/hero_image.jpg" alt="Welcome to DESIGN AI" class="responsive-img">
+                    <p>Empowering businesses and individuals with cutting-edge AI solutions. Let's shape the future together.<br>DESIGN</p>
+                    <img src=".github/hello_pic.jpg" alt="Welcome to DESIGN AI" class="responsive-img">
                 </div>
             </section>
 
             <section id="about">
                 <div class="container">
                     <h1>About Us</h1>
-                    <img src="images/about_us.jpg" alt="About Us" class="responsive-img">
+                    <img src=".github/computer_code.jpg" alt="About Us" class="responsive-img">
                     <p>At DESIGN AI, we are passionate about making AI accessible to everyone. Founded in 2025 by Agastya Naik, we are committed to open-source innovation and delivering impactful AI solutions.</p>
                 </div>
             </section>
@@ -61,7 +61,7 @@
             <section id="contact">
                 <div class="container">
                     <h1>Contact Us</h1>
-                    <img src="images/contact_us.jpg" alt="Contact Us" class="responsive-img">
+                    <img src=".github/ai_bot.jpg" alt="Contact Us" class="responsive-img">
                     <p>Have questions or need assistance? Reach out to us anytime:</p>
                     <p>Email: <a href="mailto:agastya.naik27@outlook.com">agastya.naik27@outlook.com</a></p>
                 </div>
