--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <section id="home" class="hero">
                 <div class="container">
                     <h1>Welcome to DESIGN AI</h1>
-                    <p>Empowering businesses and individuals with cutting-edge AI solutions. Let's shape the future together.<br>DESIGN</p>
+                    <p>Empowering businesses and individuals with cutting-edge AI solutions. Let's shape the future together.<br>DESIGNAI is an organisation launched by Tech_Zero to enable the world of AI into a safe, affordable and sustinable way towards the future</p>
                     <img src=".github/hello_pic.jpg" alt="Welcome to DESIGN AI" class="responsive-img">
                 </div>
             </section>
