--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta name="robots" content="index, follow">
         <title>DESIGN AI | Empowering the Future</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <script defer src="script.js"></script>
     </head>
     <body>
@@ -31,24 +32,24 @@
         <main>
             <section id="home" class="hero">
                 <div class="container">
-                    <h1>Welcome to DESIGN AI</h1>
-                    <p>Empowering businesses and individuals with cutting-edge AI solutions. Let's shape the future together.<br>DESIGNAI is an organisation launched by Tech_Zero to enable the world of AI into a safe, affordable and sustinable way towards the future</p>
-                    <img src=".github/hello_pic.jpg" alt="Welcome to DESIGN AI" class="responsive-img">
+                    <h1 class="fade-in">Welcome to DESIGN AI</h1>
+                    <p class="fade-in">Empowering businesses and individuals with cutting-edge AI solutions. Let's shape the future together.<br>DESIGN AI is an organisation launched by Tech_Zero to enable the world of AI into a safe, affordable and sustainable way towards the future.</p>
+                    <img src=".github/hello_pic.jpg" alt="Welcome to DESIGN AI" class="responsive-img slide-in">
                 </div>
             </section>
 
             <section id="about">
                 <div class="container">
-                    <h1>About Us</h1>
-                    <img src=".github/computer_code.jpg" alt="About Us" class="responsive-img">
-                    <p>At DESIGN AI, we are passionate about making AI accessible to everyone. Founded in 2025 by Agastya Naik, we are committed to open-source innovation and delivering impactful AI solutions.</p>
+                    <h1 class="fade-in">About Us</h1>
+                    <img src=".github/computer_code.jpg" alt="About Us" class="responsive-img slide-in">
+                    <p class="fade-in">At DESIGN AI, we are passionate about making AI accessible to everyone. Founded in 2025 by Agastya Naik, we are committed to open-source innovation and delivering impactful AI solutions.</p>
                 </div>
             </section>
 
             <section id="services">
                 <div class="container">
-                    <h1>Our Services</h1>
-                    <ul>
+                    <h1 class="fade-in">Our Services</h1>
+                    <ul class="fade-in">
                         <li>AI Consulting</li>
                         <li>Custom AI Development</li>
                         <li>AI Integration Services</li>
@@ -60,10 +61,10 @@
 
             <section id="contact">
                 <div class="container">
-                    <h1>Contact Us</h1>
-                    <img src=".github/ai_bot.jpg" alt="Contact Us" class="responsive-img">
-                    <p>Have questions or need assistance? Reach out to us anytime:</p>
-                    <p>Email: <a href="mailto:agastya.naik27@outlook.com">agastya.naik27@outlook.com</a></p>
+                    <h1 class="fade-in">Contact Us</h1>
+                    <img src=".github/ai_bot.jpg" alt="Contact Us" class="responsive-img slide-in">
+                    <p class="fade-in">Have questions or need assistance? Reach out to us anytime:</p>
+                    <p class="fade-in">Email: <a href="mailto:agastya.naik27@outlook.com">agastya.naik27@outlook.com</a></p>
                 </div>
             </section>
         </main>
