--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <div class="container">
                     <h1>Welcome to DESIGN AI</h1>
                     <p>Empowering businesses and individuals with cutting-edge AI solutions. Let's shape the future together.</p>
+                    <p>Our mission is to bridge the gap between technology and humanity by providing accessible, innovative, and sustainable AI solutions. Whether you're a startup or an established enterprise, we are here to help you unlock the full potential of artificial intelligence.</p>
                     <img src=".github/hello_pic.jpg" alt="Welcome to DESIGN AI" class="responsive-img">
                 </div>
             </section>
@@ -51,6 +52,7 @@
                 <div class="container">
                     <h1>About Us</h1>
                     <p>At DESIGN AI, we are passionate about making AI accessible to everyone. Founded in 2025 by Agastya Naik, we are committed to open-source innovation and delivering impactful AI solutions.</p>
+                    <p>Our team consists of experienced professionals who specialize in various AI domains, including machine learning, natural language processing, and computer vision. We believe in the power of collaboration and strive to create solutions that are not only effective but also ethical and sustainable.</p>
                 </div>
             </section>
 
@@ -87,8 +89,8 @@
                         <li>Custom AI Development</li>
                         <li>AI Integration Services</li>
                         <li>AI Training and Workshops</li>
-                        <p></p>
                     </ul>
+                    <p>We offer a comprehensive range of services tailored to meet the unique needs of our clients. From strategic consulting to hands-on development, our experts work closely with you to ensure the success of your AI initiatives. Whether you need to integrate AI into your existing systems or build custom solutions from scratch, we have the expertise to deliver exceptional results.</p>
                 </div>
             </section>
             <section id="contact">
